# Personal-R-D-APP

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.txt  README.md  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: attachments.py  experiment_logs.py  hardware_issues.py  projects.py  repositories.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  attachment.py  enums.py  experiment_log.py  hardware_issue.py  project.py  repository.py
app/schemas/: __init__.py  attachments.py  common.py  experiment_logs.py  hardware_issues.py  projects.py
app/services/: storage.py
tests/: conftest.py  test_projects.py
