[project]
name = "labpilot"
version = "0.1.0"
description = "Personal R&D engineering hub backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "sqlalchemy>=2.0.43,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.1,<9.0.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
